# meson-template

./: README.md  docker-compose.yml
config/cmake/: Dockerfile
config/meson/: Dockerfile
data/meson/: meson.build
data/meson/src/: main.c  meson.build
data/meson/subprojects/libhello/: meson.build
data/meson/subprojects/libhello/include/hello/: meson.build
data/meson/test/src/: meson.build
scripts/cmake/: build.sh  run.sh  setup.sh
scripts/meson/: build.sh  run.sh  setup.sh
